--- a/index.html
+++ b/index.html
@@ -4,25 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá, Mundo!</title>
-    <style>
-        h1 {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            color: white;
-            text-shadow: black 2px 2px 5px;
-        }
-        h2 {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            color: white;
-            text-shadow: black 2px 2px 5px;
-        }
-        body {
-            background-color: darkred;
-        }
-    </style>
+    <title>Tudo sobre Google Glass</title>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <h2>Me livrando da maldição!</h2>
+
 </body>
 </html>
