adicionei fotos e organizei o codigo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
 </head>
-<body>
-
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <hgroup>
+                    <h1>Google Glass</h1>
+                    <h2>A revolução do Google está chegando</h2>
+                </hgroup>
+                <img src="_imagens/glass-oculos-preto-peq.png" alt="glass-oculos-preto-peq">
+            </header>
+        </div>
 </body>
 </html>
