--- a/google-glass.html
+++ b/google-glass.html
@@ -9,6 +9,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 10pt;
+            overflow: hidden;
         }
         p {
             text-align: justify;
@@ -28,8 +29,6 @@
         }
         article {
             margin-bottom: 800px;
-            margin-left: 700px;
-            margin-right: 700px;
         }
         img.img-dir {
             display: block;
