--- a/specs.html
+++ b/specs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="specs.css">
 </head>
 <script src="funcoes.js"></script>
 <body>
@@ -16,7 +17,6 @@
                     <h2>A revolução do Google está chegando</h2>
                 </hgroup>
                 <img id="icone" src="_imagens/especificacoes.png" alt="glass-oculos-preto-peq">
-
                 <nav id="menu">
                     <h1>Menu Principal</h1>
                     <ul>
@@ -28,6 +28,23 @@
                     </ul>
                 </nav>
             </header>
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Glass > Especificações</h3>
+                            <h1>Raio-X no Google Glass</h1>
+                            <h2>por Thúlio Brandão</h2>
+                            <h3 class="direita">Atualizado em 06/Abril/2021</h3>
+                        </hgroup>
+                    </header>
+                    <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+                    <section id="conteudo">
+                        <img src="_imagens/glass-esquema-marcado.jpg">
+                        <iframe src="google-glass.html" name="janela" id="frame-spec" scrolling="no"></iframe>
+                    </section>
+                </article>
+            </section>
             <footer id="rodape">
                 <p>Copyright &copy; 2021 - by Thúlio Brandão <br>
                     <a href="https://www.linkedin.com/in/thúlio-brandão-9431b1205/" target="_blank">Linkedin</a> | <a href="https://github.com/ThulioASB" target="_blank">Github</a></p>
