--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h3>Tecnologia > Inovações</h3>
                         <h1>Saiba tudo sobre o Google Glass</h1>
                         <h2>por Thúlio Brandão</h2>
-                        <h3 class="direita">Atualizado em 29/Abril/2021</h3>
+                        <h3 class="direita">Atualizado em 06/Maio/2021</h3>
                     </hgroup>
                 </header>        
                     <h2>O que é</h2>
