finalizei fotos e multimidia

--- a/multimidia.html
+++ b/multimidia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <script src="funcoes.js"></script>
 <body>
@@ -28,6 +29,28 @@
                     </ul>
                 </nav>
             </header>
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Glass > Multimídia</h3>
+                            <h1>Sons e Vídeos</h1>
+                            <h2>por Thúlio Brandão</h2>
+                            <h3 class="direita">Atualizado em 16/Maio/2021</h3>
+                        </hgroup>
+                    </header>
+                    <div id="tv-radio">
+                        <audio id="musica" controls="controls">
+                            <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mp3">
+                            Desculpe, não foi possível carregar o áudio.
+                        </audio>
+                        <video id="filme" controls="controls">
+                            <source src="_media/getting-started.mp4" type="video/mp4">
+                            Desculpe, não foi possível carregar o vídeo.
+                        </video>
+                    </div>
+                </article>
+            </section>
             <footer id="rodape">
                 <p>Copyright &copy; 2021 - by Thúlio Brandão <br>
                     <a href="https://www.linkedin.com/in/thúlio-brandão-9431b1205/" target="_blank">Linkedin</a> | <a href="https://github.com/ThulioASB" target="_blank">Github</a></p>
