--- a/fotos.html
+++ b/fotos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="fotos.css">
 </head>
 <script src="funcoes.js"></script>
 <body>
@@ -28,6 +29,29 @@
                     </ul>
                 </nav>
             </header>
+
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Glass > Fotos</h3>
+                            <h1>Galeria de Imagens do Google Glass</h1>
+                            <h2>por Thúlio Brandão</h2>
+                            <h3 class="direita">Atualizado em 16/Maio/2021</h3>
+                        </hgroup>
+                    </header>
+                    <p>Veja, na nossa galeria de fotos, várias belas imagens, que mostram algumas das principais características do Google Glass, como recursos e propriedades, que estão impresionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+                    <ul id="album-fotos">
+                        <li id="foto01"><span>Agenda e lembretes</span></li>
+                        <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+                        <li id="foto03"><span>Leve e compacto</span></li>
+                        <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+                        <li id="foto05"><span>Vários tipos de lente</span></li>
+                        <li id="foto06"><span>Informações importantes</span></li>
+                    </ul>
+                </article>
+            </section>
+
             <footer id="rodape">
                 <p>Copyright &copy; 2021 - by Thúlio Brandão <br>
                     <a href="https://www.linkedin.com/in/thúlio-brandão-9431b1205/" target="_blank">Linkedin</a> | <a href="https://github.com/ThulioASB" target="_blank">Github</a></p>
