--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="form.css">
 </head>
 <script src="funcoes.js"></script>
+<script>
+    function calc_total() {
+        var qtd = parseInt(document.getElementById('cQtd').value);
+        tot = qtd * 1500;
+        document.getElementById('cTot').value = tot;
+    }
+</script>
 <body>
         <div id="interface">
             <header id="cabecalho">
@@ -28,6 +36,93 @@
                     </ul>
                 </nav>
             </header>
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Fale Conosco > Contato</h3>
+                            <h1>Formulário de Contato</h1>
+                            <h2>por Thúlio Brandão</h2>
+                            <h3 class="direita">Atualizado em 16/Maio/2021</h3>
+                        </hgroup>
+                    </header>
+                    <form method="post" id="fContato" action="mailto:contato@gmail.com" oninput="calc_total(); ">
+                        <fieldset id="usuario">
+                            <legend>Identificação do Usuário</legend>
+                            <p><label for="cNome">Nome: </label> <input type="text" name="tNome" id="cNome" size="20" maxlength="50" placeholder="Nome Completo"></p>
+                            <p><label for="cSenha">Senha: </label> <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"></p>
+                            <p><label for="cEmail">E-mail: </label> <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40" placeholder="E-mail"></p>
+                            <fieldset id="sexo">
+                                <legend>Sexo</legend>
+                                <input type="radio" name="tSexo" id="cMasc" checked> <label for="cMasc">Masculino</label> <br>
+                                <input type="radio" name="tSexo" id="cFem"> <label for="cFem">Feminino</label></fieldset>
+                            <p><input type="date" name="tNasc" id="cNasc"><label for="cNasc">Data de Nascimento:</label> </p>
+                        </fieldset>
+                        <fieldset id="endereco">
+                            <legend>Endereço do Usuário</legend>
+                            <p><label for="cRua">Logradouro: </label> <input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav, ..."></p>
+                            <p><label for="cNum">Número: </label> <input type="number" name="tNum" id="cNum" min="0" max="99999"></p>
+                            <p><label for="cEst">Estado: </label><select name="tEst" id="cEst">
+                                <optgroup label="Região Sudeste">
+                                    <option value="RJ">Rio de Janeiro</option>
+                                    <option value="SP">São Paulo</option>
+                                    <option value="MG">Minas Gerais</option>
+                                </optgroup>
+                                <optgroup label="Região Nordeste">
+                                    <option value="RN" selected>Rio Grande do Norte</option>
+                                    <option value="CE">Ceará</option>
+                                </optgroup>
+                                <optgroup label="Região Sul">
+                                    <option value="SC">Santa Catarina</option>
+                                    <option value="RS">Rio Grande do Sul</option>
+                                    <option value="PR">Paraná</option>
+                                </optgroup>
+                                <optgroup label="Norte">
+                                    <option value="AM">Amazonas</option>
+                                </optgroup>
+                            </select></p>
+                            <p><label for="cCid">Cidade:</label> <input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua Cidade" list="cidades"></p>
+                            <datalist id="cidades">
+                                <option value="Natal"></option>
+                                <option value="Mossoró"></option>
+                                <option value="Gramado"></option>
+                                <option value="Porto Alegre"></option>
+                                <option value="Curitiba"></option>
+                                <option value="Londrina"></option>
+                                <option value="Florianópolis"></option>
+                                <option value="Joinville"></option>
+                                <option value="Blumenau"></option>
+                                <option value="Balneário Camboriú"></option>
+                                <option value="Rio de Janeiro"></option>
+                                <option value="Niterói"></option>
+                                <option value="São Paulo"></option>
+                                <option value="Petrópolis"></option>
+                                <option value="Parnamirim"></option>
+                                <option value="Fortaleza"></option>
+                                <option value="Manaus"></option>
+                            </datalist>
+                        </fieldset>
+                        <fieldset id="mensagem">
+                            <legend>Mensagem do Usuário</legend>
+                            <p><label for="cUrg">Grau de Urgência:</label>Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="5">Máx</p>
+                            <p><label for="cMsg">Mensagem:</label><textarea name="tMsg" id="cMsg" cols="45" rows="20" placeholder="Deixe aqui sua mensagem"></textarea></p>
+                        </fieldset>
+                        <fieldset id="pedido">
+                            <legend>Quero um Google Glass</legend>
+                            <p><input type="checkbox" name="tPed" id="cPed" checked><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                            <p><label for="cCor">Cor: </label><select name="tCor" id="cCor">
+                                <option>Preto</option>
+                                <option>Branco</option>
+                                <option>Vermelho</option>
+                                <option>Dourado</option>
+                            </select></p>
+                            <p><label for="cQtd">Quantidade:</label><input type="number" name="tQtd" id="cQtd" min="0" max="5"></p>
+                            <p><label for="cTot">Preço Total: R$</label><input type="text" name="tTot" id="cTot" readonly></p>
+                        </fieldset>
+                    </form>
+                    <input type="submit" name="tEnviar" id="cEnviar" value="Enviar">
+                </article>
+            </section>
             <footer id="rodape">
                 <p>Copyright &copy; 2021 - by Thúlio Brandão <br>
                     <a href="https://www.linkedin.com/in/thúlio-brandão-9431b1205/" target="_blank">Linkedin</a> | <a href="https://github.com/ThulioASB" target="_blank">Github</a></p>
